force-app/main/default/objects/ADM_Solution_Overview__c/fields/Big_Marketing_Push__c.field-meta.xml
<CustomField>
    <fullName>Big_Marketing_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These Solution Overviews are planned for empahsis in release and launch Marketing efforts</description>
    <label>Big Marketing Push</label>
    <type>Checkbox</type>
</CustomField>