force-app/main/default/objects/ADM_Solution_Overview__c/fields/Customer_Communication_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Communication_Requirement__c</fullName>
    <inlineHelpText>Will this product enhancement or feature enablement require proactive communication from SFDC to customer Sys Admin&#39;s informing them of a behavior change or action they will be required to take?</inlineHelpText>
    <label>Customer Communication Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>