force-app/main/default/objects/ADM_Solution_Overview__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Enter specific details of your features or feature enhancements which are customer impacting.</inlineHelpText>
    <label>Description</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>