force-app/main/default/objects/ADM_Solution_Overview__c/fields/Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Date__c</fullName>
    <label>Exception Date</label>
    <type>Date</type>
</CustomField>