force-app/main/default/objects/ADM_Solution_Overview__c/fields/Explain_if_no_customer_comm_required__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_no_customer_comm_required__c</fullName>
    <inlineHelpText>Provide explicit details why no customer communication is required</inlineHelpText>
    <label>Explain if &quot;NO&quot; Customer Comm Required</label>
    <type>TextArea</type>
</CustomField>