force-app/main/default/objects/ADM_Solution_Overview__c/fields/Explain_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Explain_License_Type__c</fullName>
    <inlineHelpText>If feature requires additional license, please list license requirements, pricing here.</inlineHelpText>
    <label>If  &quot;YES&quot; - Explain License Type</label>
    <type>TextArea</type>
</CustomField>