force-app/main/default/objects/ADM_Solution_Overview__c/fields/Feature_Enablement_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Feature_Enablement_Timeline__c</fullName>
    <inlineHelpText>All features must be enabled with the release or within 24 hrs of the release.
*No exceptions*</inlineHelpText>
    <label>Feature Enablement Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>With Release</fullName>
            </value>
            <value>
                <fullName>Post Scripts (within 24hrs)</fullName>
            </value>
            <value>
                <fullName>BT Perm (within 24hrs)</fullName>
            </value>
            <value>
                <fullName>Off Cycle (Requires Exec Approval)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>