force-app/main/default/objects/ADM_Solution_Overview__c/fields/Include_in_Admin_Preview__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Admin_Preview__c</fullName>
    <label>Include in Admin Preview</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>