force-app/main/default/objects/ADM_Solution_Overview__c/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field should be checked when a feature(s) is not customer facing, but useful and/or valuable knowledge for internal audiences.</inlineHelpText>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>