force-app/main/default/objects/ADM_Solution_Overview__c/fields/Internal_feature_only__c.field-meta.xml
<CustomField>
    <fullName>Internal_feature_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal feature only</label>
    <type>Checkbox</type>
</CustomField>