force-app/main/default/objects/ADM_Solution_Overview__c/fields/Major_Minor_Status__c.field-meta.xml
<CustomField>
    <fullName>Major_Minor_Status__c</fullName>
    <label>Major-Minor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major Feature</fullName>
            </value>
            <value>
                <fullName>Minor Feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>