force-app/main/default/objects/ADM_Solution_Overview__c/fields/Marketing_Description__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Description__c</fullName>
    <inlineHelpText>Enter the Marketing description for the release preview document</inlineHelpText>
    <label>Marketing Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>