force-app/main/default/objects/ADM_Solution_Overview__c/fields/Marketing_Key_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Key_Benefits__c</fullName>
    <inlineHelpText>2 - 4 bullet points of key business benefits.  If feature can&#39;t easily be tied to business benefits then put 2 - 4 key technical benefits</inlineHelpText>
    <label>Marketing Key Benefits</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>