force-app/main/default/objects/ADM_Solution_Overview__c/fields/Marketing_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name_2__c</fullName>
    <inlineHelpText>Temporary field for William Gradin to use</inlineHelpText>
    <label>Marketing Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>