force-app/main/default/objects/ADM_Solution_Overview__c/fields/Marketing_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name__c</fullName>
    <inlineHelpText>Marketing Name for Release Preview document.  This field is audited.</inlineHelpText>
    <label>Marketing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>