force-app/main/default/objects/ADM_Solution_Overview__c/fields/Marketing_Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tag_Line__c</fullName>
    <inlineHelpText>Sentence fragment to briefly describe the feature.</inlineHelpText>
    <label>Marketing Tag Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>