force-app/main/default/objects/ADM_Solution_Overview__c/fields/Off_Cycle_Release__c.field-meta.xml
<CustomField>
    <fullName>Off_Cycle_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the feature will not be released with R1 or R2 releases.</inlineHelpText>
    <label>Off Cycle Release</label>
    <type>Checkbox</type>
</CustomField>