force-app/main/default/objects/ADM_Solution_Overview__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <label>Product Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Core - Architecture</fullName>
            </value>
            <value>
                <fullName>CRM Apps - Content</fullName>
            </value>
            <value>
                <fullName>CRM Apps - Google Apps</fullName>
            </value>
            <value>
                <fullName>CRM Apps - Ideas</fullName>
            </value>
            <value>
                <fullName>CRM Apps - Marketing/SFGA</fullName>
            </value>
            <value>
                <fullName>CRM Apps - PRM</fullName>
            </value>
            <value>
                <fullName>CRM Apps - SFA</fullName>
            </value>
            <value>
                <fullName>CRM Apps - SSS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Platform - Admin</fullName>
            </value>
            <value>
                <fullName>Platform - API/Integration/Security</fullName>
            </value>
            <value>
                <fullName>Platform - Application Development</fullName>
            </value>
            <value>
                <fullName>Platform - Appstore</fullName>
            </value>
            <value>
                <fullName>Platform - Desktop Clients</fullName>
            </value>
            <value>
                <fullName>Platform - Mobile</fullName>
            </value>
            <value>
                <fullName>Platform - Other</fullName>
            </value>
            <value>
                <fullName>SFA - Verticals Marketing</fullName>
            </value>
            <value>
                <fullName>SFA - Verticals Product</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>