force-app/main/default/objects/ADM_Solution_Overview__c/fields/Product_Leader__c.field-meta.xml
<CustomField>
    <fullName>Product_Leader__c</fullName>
    <label>Product Leader</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chuck Dietrich</fullName>
            </value>
            <value>
                <fullName>Clara Shih</fullName>
            </value>
            <value>
                <fullName>David Brooks</fullName>
            </value>
            <value>
                <fullName>Elay Cohen</fullName>
            </value>
            <value>
                <fullName>Eric Bezar</fullName>
            </value>
            <value>
                <fullName>Jamie Grenney</fullName>
            </value>
            <value>
                <fullName>Jim Rivera</fullName>
            </value>
            <value>
                <fullName>John Ball</fullName>
            </value>
            <value>
                <fullName>Kraig Swensrud</fullName>
            </value>
            <value>
                <fullName>Mark Abramowitz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>