force-app/main/default/objects/ADM_Solution_Overview__c/fields/Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Status__c</fullName>
    <inlineHelpText>What is the plan for the marketed availability of this product / feature?</inlineHelpText>
    <label>Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GA</fullName>
                <color>#E27001</color>
                <label>GA</label>
            </value>
            <value>
                <fullName>Beta</fullName>
                <color>#78C953</color>
                <label>Beta</label>
            </value>
            <value>
                <fullName>Pilot</fullName>
                <color>#0B6FCE</color>
                <label>Pilot</label>
            </value>
            <value>
                <fullName>Developer Preview</fullName>
                <color>#F3D904</color>
                <label>Developer Preview</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>