force-app/main/default/objects/ADM_Solution_Overview__c/fields/Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Build</label>
    <referenceTo>ADM_Build__c</referenceTo>
    <relationshipLabel>Solution Overviews</relationshipLabel>
    <relationshipName>Solution_Overviews</relationshipName>
    <type>Lookup</type>
</CustomField>