force-app/main/default/objects/ADM_Solution_Overview__c/fields/Solution_Overview_Link__c.field-meta.xml
<CustomField>
    <fullName>Solution_Overview_Link__c</fullName>
    <label>Solution Overview Link</label>
    <type>Url</type>
</CustomField>