force-app/main/default/objects/ADM_Solution_Overview__c/fields/Solution_Overview_Status__c.field-meta.xml
<CustomField>
    <fullName>Solution_Overview_Status__c</fullName>
    <label>Solution Overview Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>