force-app/main/default/objects/ADM_Solution_Overview__c/fields/Target_Off_Cycle_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Off_Cycle_Release_Date__c</fullName>
    <inlineHelpText>If you chose &quot;Off Cycle&quot;, please enter the target date of this enablement/release.
This requires Exec Approval. You should have received an automated email with instructions on how to obtain this Exec Approval.</inlineHelpText>
    <label>Target Off Cycle Release Date</label>
    <type>Date</type>
</CustomField>