force-app/main/default/objects/ADM_Solution_Overview__c/fields/Target_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Release_Date__c</fullName>
    <inlineHelpText>If you chose &#39;Off-Cycle&#39; for your feature enablement timing, please provide the TARGET date of this enablement/release.
&#39;Off Cycle&#39; requires Exec Approval. You should have received an automated email with instructions on how to obtain this Exec Approval.</inlineHelpText>
    <label>Off Cycle Target Release Date</label>
    <type>Date</type>
</CustomField>