force-app/main/default/objects/ADM_Solution_Overview__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>