force-app/main/default/objects/ADM_Solution_Overview__c/listViews/x148SolutionOverviews.listView-meta.xml
<ListView>
    <fullName>x148SolutionOverviews</fullName>
    <columns>NAME</columns>
    <columns>Product_Manager__c</columns>
    <columns>Big_Marketing_Push__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>148 Solution Overviews</label>
</ListView>