force-app/main/default/objects/ADM_Solution_Overview__c/listViews/x154SolutionOverviews_d_3.listView-meta.xml
<ListView>
    <fullName>x154SolutionOverviews_d_3</fullName>
    <columns>NAME</columns>
    <columns>Product_Manager__c</columns>
    <columns>Solution_Overview_Status__c</columns>
    <columns>Big_Marketing_Push__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>154 Solution Overviews</label>
</ListView>