force-app/main/default/objects/ADM_Solution_Overview__c/listViews/x156SolutionOverviewsPlatform.listView-meta.xml
<ListView>
    <fullName>x156SolutionOverviewsPlatform</fullName>
    <columns>NAME</columns>
    <columns>Product_Manager__c</columns>
    <columns>Product_Division__c</columns>
    <columns>Description__c</columns>
    <columns>Target_Audience__c</columns>
    <columns>Include_in_Admin_Preview__c</columns>
    <columns>Solution_Overview_Status__c</columns>
    <columns>Solution_Overview_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Division__c</field>
        <operation>startsWith</operation>
        <value>Platform</value>
    </filters>
    <label>156 Solution Overviews - Platform</label>
</ListView>