force-app/main/default/objects/ADM_Solution_Overview__c/listViews/x158SolutionOverviews.listView-meta.xml
<ListView>
    <fullName>x158SolutionOverviews</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>158 Solution Overviews</label>
</ListView>