force-app/main/default/objects/ADM_Solution_Overview__c/listViews/x160SolutionOverviews.listView-meta.xml
<ListView>
    <fullName>x160SolutionOverviews</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>160 Solution Overviews</label>
</ListView>