force-app/main/default/objects/ADM_Solution_Overview__c/listViews/X162_Solution_Overviews1.listView-meta.xml
<ListView>
    <fullName>X162_Solution_Overviews1</fullName>
    <columns>NAME</columns>
    <columns>Solution_Overview_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>162 Solution Overviews</label>
</ListView>